fixed-2
.min() - not working for me without Integer::compareTo